--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,6 @@
   width: 70%;
   height: 100%;
   margin: 0 auto;
-  background-color: grey;
   border-radius: 10px;
   padding: 10px 10px 80px 10px;
   text-align: center;
@@ -15,22 +14,32 @@
 }
 
 .card {
-  background-color: green;
+  background-color: #ad343e;
   width: 100px;
-  height: 150px;
+  height: 120px;
   margin: 5px;
   font-weight: 700;
   font-size: 30px;
+  border-radius: 10px;
 }
 
 .item1 {
   grid-area: header;
+  padding: 0;
+  margin: 0;
 }
 .item2 {
   grid-area: board;
 }
-.item3 {
-  grid-area: scoreboard;
+
+.title {
+  font-size: 23px;
+  margin: 0;
+}
+
+.subtitle-rounds {
+  font-size: 23px;
+  margin: 5px 0px;
 }
 
 .grid-container {
@@ -38,16 +47,17 @@
   grid-template-areas:
     "header header header header header header"
     "board board board board board board"
-    "scoreboard scoreboard scoreboard scoreboard scoreboard scoreboard";
+    "board board board board board board";
   grid-gap: 10px;
-  background-color: #2196f3;
+  background-color: #d68b7b;
+  margin: 0 auto;
   padding: 10px;
 }
 
 .grid-container > div {
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: #e2ada2;
   text-align: center;
-  padding: 20px 0;
+  padding: 0;
   font-size: 30px;
 }
 
@@ -56,9 +66,10 @@
     grid-template-areas:
       "header header header header header header"
       "board board board board board board"
-      "board board board board scoreboard scoreboard";
+      "board board board board board board";
     max-width: 960px;
     margin: 0 auto;
+    grid-template-rows: auto 1fr 1fr;
   }
 }
 
@@ -79,7 +90,8 @@
   display: none;
 }
 
-#modal > div {
+#modal > div,
+.container {
   background-color: white;
   max-width: 500px;
   padding: 15px;
@@ -88,7 +100,25 @@
   background: #faeff0;
 }
 
-#modal .buttons button {
+.name-button button,
+#modal button {
+  background-color: #ad343e;
+  padding: 5px 25px;
+  color: white;
+  font-size: 18px;
+  border: #333 1px solid;
+  border-radius: 5px;
+  display: block;
+  margin: 0 auto;
+  cursor: pointer;
+}
+
+#modal .buttons button,
+.name-button button {
   display: inline-block;
-  margin-right: 15px;
+  margin: 0 10px;
+}
+
+#login-name {
+  margin: 10px;
 }
